// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Spinner Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-gKAaRy iZvmHx sc-iCoGMd kmNxim sc-hHEiqL kNzcmQ sc-cbeScs bRaXkq"
    >
      <div
        class="sc-ljsmAU fmJRlR"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-gKAaRy iZvmHx sc-iCoGMd kmNxim sc-hHEiqL jJykdQ sc-cbeScs bRaXkq"
    >
      <div
        class="sc-ljsmAU kDuOhP"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Children 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-jlZJtj kqRTMR sc-cbeScs bRaXkq"
    >
      <div
        class="sc-gKAaRy iZvmHx sc-iCoGMd fbiImu sc-hHEiqL sc-dTSzeu kRABxs fFvVEP"
      >
        <div
          class="sc-gKAaRy iZvmHx sc-iCoGMd kmNxim sc-hHEiqL kNzcmQ"
        >
          <div
            class="sc-ljsmAU fmJRlR"
          />
          <div
            class="sc-fKgJPI jlSUcY sc-bCwfaz kAgYLP"
          >
            Spinning...
          </div>
        </div>
      </div>
      <div
        class="sc-htmcrh iuHVpp"
      >
        <div
          class="sc-gKAaRy iZvmHx sc-iCoGMd duvkHC"
          style="background-color: rgb(248, 249, 253);"
        >
          Spinning, the wrapped children are made opaque
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Component Label 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-gKAaRy iZvmHx sc-iCoGMd kmNxim sc-hHEiqL kNzcmQ sc-cbeScs bRaXkq"
    >
      <div
        class="sc-ljsmAU fmJRlR"
      />
      <div
        class="sc-fKgJPI jlSUcY sc-bCwfaz kAgYLP"
      >
        <div
          class="sc-fKgJPI jlSUcY sc-bCwfaz dpjJxb"
        >
          Building image 
          <button
            class="StyledButton-sc-323bzc-0 kBaGWu sc-bqGGPW sc-bkbkJK ffJBuc ejJZLx sc-dIvrsQ jZURTW"
            type="button"
          >
            12345
          </button>
          ...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Label 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-gKAaRy iZvmHx sc-iCoGMd kmNxim sc-hHEiqL kNzcmQ sc-cbeScs bRaXkq"
    >
      <div
        class="sc-ljsmAU fmJRlR"
      />
      <div
        class="sc-fKgJPI jlSUcY sc-bCwfaz kAgYLP"
      >
        Spinning...
      </div>
    </div>
  </div>
</div>
`;
